2024-01-09T16:12:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7463743598 # 15
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: query file size: 24291
* notice: accum prev / next / diff: re vi: 0 241 / 0 243 / +0 +2

2024-01-08T04:12:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7443092098 # 6
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: query file size: 24313
* notice: accum prev / next / diff: re vi: 0 239 / 0 241 / +0 +2

2024-01-05T04:18:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7417946174 # 4435
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-05
* notice: query file size: 24337
* notice: accum prev / next / diff: re vi: 0 235 / 0 239 / +0 +4

2023-12-31T12:15:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7370353477 # 4433
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-31
* notice: query file size: 24519
* notice: accum prev / next / diff: re vi: 0 233 / 0 235 / +0 +2

2023-12-29T12:14:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7356518119 # 4421
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-29
* notice: query file size: 24317
* notice: accum prev / next / diff: re vi: 0 231 / 0 233 / +0 +2

2023-12-26T08:11:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7327852780 # 4402