@@ -1,3 +1,9 @@
+2024-01-09T20:10:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7466349062 # 16
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-09
+* notice: query file size: 24319
+* notice: accum prev / next / diff: re vi: 0 243 / 0 245 / +0 +2
+
 2024-01-09T16:12:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7463743598 # 15
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-09
